# SMARTRAG

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
gateway/: Dockerfile  README.md  go.mod  main.go
gateway/internal/auth/: jwt.go
gateway/internal/cache/: redis.go
gateway/internal/config/: config.go
gateway/internal/middleware/: auth.go  cache.go  cors.go  logging.go  metrics.go  ratelimit.go
gateway/internal/proxy/: handler.go
gateway/internal/ratelimit/: redis_limiter.go
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  pvc.yaml  rbac.yaml  secrets.yaml  service.yaml
monitoring/: grafana-dashboard.json  prometheus.yml  smartrag_rules.yml
monitoring-agent/: .gitignore  Dockerfile  README.md  config.example.yaml  go.mod  go.sum
monitoring-agent/cmd/: handlers.go  main.go
monitoring-agent/internal/collectors/: health.go  system.go
monitoring-agent/internal/config/: config.go
monitoring-agent/pkg/types/: metrics.go
scripts/: deploy.sh  start.sh  test.sh
src/api/: __init__.py  endpoints.py  main.py  middleware.py  models.py
src/cache/: __init__.py  redis_client.py  strategies.py
src/core/: config.py  document_processor.py  exceptions.py
src/embeddings/: generator.py  models.py
src/llm/: __init__.py  client.py  streaming.py
src/retrieval/: search.py  vector_store.py
streaming-proxy/: Dockerfile  README.md  go.mod
streaming-proxy/cmd/: main.go
streaming-proxy/internal/config/: config.go
streaming-proxy/internal/metrics/: metrics.go
streaming-proxy/internal/proxy/: streaming.go
streaming-proxy/internal/sse/: handler.go
streaming-proxy/internal/websocket/: handler.go
streaming-proxy/pkg/types/: types.go
tests/: conftest.py  test_api.py  test_core.py  test_retrieval.py
vector-search/: Dockerfile  README.md  go.mod
vector-search/cmd/server/: main.go
vector-search/internal/config/: config.go
vector-search/internal/grpc/: server.go
vector-search/internal/metrics/: metrics.go
vector-search/internal/vector/: index.go
vector-search/pkg/proto/: vector_search.proto
vector-search/scripts/: generate_proto.sh
vector-server/: go.mod  main.go
